--- a/src/pages/journal/journal.html
+++ b/src/pages/journal/journal.html
@@ -61,7 +61,9 @@
               </ion-row>
             </ion-col>
             <ion-col>
-              {{snapshot.text}}
+              <div [innerHTML]=snapshot.text></div>
+
+
             </ion-col>
 
             <ion-col>
