--- a/src/pages/add-snapshot-modal/add-snapshot-modal.html
+++ b/src/pages/add-snapshot-modal/add-snapshot-modal.html
@@ -7,7 +7,10 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-navbar color='primary'>Snapshot details</ion-navbar>
+  <ion-navbar color='primary'>
+    <ion-title>Exercise details</ion-title>
+  </ion-navbar>
+
     <ion-list>
 
       <ion-item>
