--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -17,7 +17,12 @@
 
 
 <ion-content padding>
+
+
   <ion-card text-center>
+    <ion-navbar color='primary'>
+      <ion-title>Login</ion-title>
+    </ion-navbar>
     <ion-item>
       <ion-label stacked>Email</ion-label>
       <ion-input type='text' placeholder="email" [(ngModel)]='user.email'></ion-input>
