--- a/src/pages/fitness/fitness.html
+++ b/src/pages/fitness/fitness.html
@@ -8,6 +8,18 @@
 
   <ion-navbar>
     <ion-title>Fitness</ion-title>
+
+    <ion-row nowrap>
+      <ion-col>
+        <chip amount='{{roundNumber(myProfile.treatPoints)}}' typeIcon='beer' typeText="TP"></chip>
+      </ion-col>
+      <ion-col>
+        <chip amount='{{roundNumber(myProfile.fitnessPoints)}}' typeIcon='walk' typeText="FP"></chip>
+      </ion-col>
+      <ion-col>
+        <chip amount='{{roundNumber(myProfile.money)}}' typeIcon='cash' typeText="{{myProfile.currency}}"></chip>
+      </ion-col>
+    </ion-row>
   </ion-navbar>
 
 </ion-header>
@@ -15,68 +27,171 @@
 
 <ion-content padding>
 
-
-    <ion-card>
-      <ion-navbar color='primary'>
+  <ion-card>
+    <ion-navbar color='primary'>
       <ion-title>
-        Fitness Tracker
+        Exercise Plans
       </ion-title>
-        <ion-buttons end>
-          <button ion-button icon-only (click)='addExercise()'>
+      <ion-buttons end>
+        <button ion-button icon-only (click)='addPlan()'>
             <ion-icon name='add'></ion-icon>
           </button>
-        </ion-buttons>
-      </ion-navbar>
-      <ion-card-content>
+      </ion-buttons>
+    </ion-navbar>
 
-        <ion-label col-3>Current Amount: {{roundNumber(myProfile.treatPoints)}}</ion-label>
-        <ion-label col-3>Current Amount: {{roundNumber(myProfile.fitnessPoints)}}</ion-label>
-        <ion-label col-3>Current Amount: {{roundNumber(myProfile.money)}}</ion-label>
-        <ion-grid>
-          <ion-row *ngFor='let exercise of exercises'>
-            <ion-col col-2>
-              {{exercise.title}}
-            </ion-col>
+    <ion-card-content>
+      <ion-grid>
+        <ion-row *ngFor='let plan of plans' class='planStyle'>
+          <ion-col>
+            <ion-row nowrap>
+              <ion-title text-center>
+                {{plan.title | uppercase}}
+              </ion-title>
+              <button ion-button color='good' (click)='refreshPlan(plan)'>
+                <ion-icon name='refresh'></ion-icon>
+              </button>
 
-            <ion-col>
+              <button ion-button color='danger' (click)='deletePlan(plan)'>
+                <ion-icon name='trash'></ion-icon>
+              </button>
+            </ion-row>
 
-                <ion-row>
-                  <ion-item col-3>
-                    <ion-label stacked>TreatPoints per 1 {{exercise.unit}}</ion-label>
-                    <ion-input [(ngModel)]='exercise.TP' #exerciseTP></ion-input>
-                  </ion-item>
+            <ion-row nowrap>
+              <ion-col col-2 offset-3 nopadding>
+                <chip amount='{{roundNumber(plan.TP)}}' typeIcon='beer' typeText="TP" color='good'></chip>
+              </ion-col>
+              <ion-col col-2 nopadding>
+                <chip amount='{{roundNumber(plan.FP)}}' typeIcon='walk' typeText="FP" color='good'></chip>
+              </ion-col>
+              <ion-col col-2 nopadding>
+                <chip amount='{{roundNumber(plan.Money)}}' typeIcon='cash' typeText="{{myProfile.currency}}" color='good'></chip>
+              </ion-col>
+            </ion-row>
 
-                  <ion-item col-3>
-                    <ion-label stacked>FitnessPoints per 1 {{exercise.unit}}</ion-label>
-                    <ion-input [(ngModel)]='exercise.FP' #exerciseFP></ion-input>
-                  </ion-item>
+            <ion-row *ngFor='let exercise of plan["exercises"]; let i = index' style="border-bottom: 1px solid silver; ">
+              <ion-col col-2 padding-top>
+                <ion-title style="padding-top: 15px!important; text-align: center; padding-left: 0px!important; padding-right: 0px!important;">
+                  {{ exercise.exercise | uppercase}}
+                </ion-title>
+              </ion-col>
 
-                  <ion-item col-3>
-                    <ion-label stacked>Money per 1 {{exercise.unit}}</ion-label>
-                    <ion-input [(ngModel)]='exercise.Money' #exerciseMoney></ion-input>
-                  </ion-item>
-                  <button ion-button (click)='updateExercise(exercise)'>Update</button>
-                  <button ion-button color='danger' (click)='deleteExercise(exercise)'>Delete</button>
+              <ion-col text-center [ngClass]="exercise.repsDid == exercise.repsShould? 'done': (exercise.repsDid==0? 'undone': 'incomplete')" padding-top>
+                <ion-range min="0" max="{{exercise.repsShould}}" [(ngModel)]="exercise.repsDid" snaps="true" step="1" disabled>
+                  <ion-icon small range-left name="code-working"></ion-icon>
+                  <ion-icon range-right name="clipboard"></ion-icon>
+                </ion-range>
+              </ion-col>
+              <ion-col col-2 padding-top>
+                <ion-row text-center>
+                  <ion-label text-center nopadding style="margin-top:-5px!important; margin-bottom: 0px;" [ngClass]="exercise.repsDid == exercise.repsShould? 'done': (exercise.repsDid==0? 'undone': 'incomplete')">
+                    {{exercise.repsDid}}/{{exercise.repsShould}}
+                  </ion-label>
                 </ion-row>
-            </ion-col>
 
-            <ion-col>
-              <button ion-button (click)='addReps(exercise, 1)'>
+                <ion-row style="margin-top:-10px!important; margin-bottom: 0px;">
+
+                  <button ion-button (click)='addPReps(plan, i, 1)'>
+                    <ion-icon name='add' >1</ion-icon>
+                  </button>
+                  <button ion-button (click)='addPReps(plan, i, 10)'>
+                    <ion-icon name='add' >10</ion-icon>
+                  </button>
+                </ion-row>
+              </ion-col>
+              <ion-col class='actionButtons' col-1 nopadding padding-top>
+                <ion-row text-right class='actionButton' style="margin-top: 0px!important;">
+                  <button ion-button icon-only small color='danger' (click)='deletePExercise(plan, i)'>
+                    <ion-icon name='trash'></ion-icon>
+                  </button>
+
+                </ion-row>
+                <ion-row text-right class='actionButton' style="margin-top: 0px!important;">
+                  <button ion-button icon-only small color='good' (click)='updateTreat(treat)' disabled>
+                    <ion-icon name='create'></ion-icon>
+                  </button>
+                </ion-row>
+              </ion-col>
+            </ion-row>
+
+            <ion-row>
+              <ion-col text-center>
+                <button ion-button (click)='addPExercise(plan)'>
+                  Add new exercise
+                </button>
+              </ion-col>
+            </ion-row>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-navbar color='primary'>
+      <ion-title>
+        Freestyle fitness
+      </ion-title>
+      <ion-buttons end>
+        <button ion-button icon-only (click)='addExercise()'>
+            <ion-icon name='add'></ion-icon>
+          </button>
+      </ion-buttons>
+    </ion-navbar>
+    <ion-card-content>
+
+
+      <ion-grid>
+        <ion-row *ngFor='let exercise of exercises'>
+          <ion-col col-6  padding-top>
+            <ion-row>
+              <ion-title text-center style="padding:0px!important; width: fit-content!important;">
+                {{exercise.title}}
+              </ion-title>
+            <!-- </ion-row>
+            <ion-row>
+              <ion-col text-center> -->
+                <chip amount='{{exercise.TP}}' typeIcon='beer' typeText="TP" color='good'></chip>
+                <chip amount='{{exercise.FP}}' typeIcon='walk' typeText="FP" color='good'></chip>
+                <chip amount='{{exercise.Money}}' typeIcon='cash' typeText="{{myProfile.currency}}" color='good'></chip>
+
+              <!-- </ion-col> -->
+            </ion-row>
+          </ion-col>
+
+
+
+          <ion-col padding-top>
+            <button ion-button (click)='addReps(exercise, 1)'>
                 <ion-icon name='add' ></ion-icon>
                 1 {{exercise.unit}}
               </button>
-              <button ion-button (click)='addReps(exercise, 10)'>
+            <button ion-button (click)='addReps(exercise, 10)'>
                 <ion-icon name='add'></ion-icon>
                 10 {{exercise.unit}}S
               </button>
-              <button ion-button (click)='addReps(exercise, 100)'>
+            <button ion-button (click)='addReps(exercise, 100)'>
                 <ion-icon name='add'></ion-icon>
                 100 {{exercise.unit}}S
               </button>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-      </ion-card-content>
-    </ion-card>
+          </ion-col>
+
+          <ion-col class='actionButtons' col-1 nopadding>
+            <ion-row text-right class='actionButton' style="margin-top: 0px!important;">
+              <button ion-button icon-only small color='danger' (click)='deleteExercise(exercise)'>
+                <ion-icon name='trash'></ion-icon>
+              </button>
+
+            </ion-row>
+            <ion-row text-right class='actionButton' style="margin-top: 0px!important;">
+              <button ion-button icon-only small color='good' (click)='updateExercise(exercise)' disabled>
+                <ion-icon name='create'></ion-icon>
+              </button>
+            </ion-row>
+          </ion-col>
+
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
