--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -44,7 +44,10 @@
             <ion-label floating>Last Name</ion-label>
             <ion-input [(ngModel)]='myProfile.lastName'></ion-input>
           </ion-item>
-
+          <ion-item>
+            <ion-label floating>Currency</ion-label>
+            <ion-input [(ngModel)]='myProfile.currency'></ion-input>
+          </ion-item>
         </ion-col>
 
       </ion-row>
