--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -19,6 +19,10 @@
 
 <ion-content padding>
   <ion-card text-center>
+
+    <ion-navbar color='primary'>
+      <ion-title>Register</ion-title>
+    </ion-navbar>
     <ion-item>
       <ion-label stacked>Email</ion-label>
       <ion-input type='text' placeholder="email" [(ngModel)]='user.email'></ion-input>
